--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,7 @@
 <resources>
     <string name="app_name">Birthday Buddy</string>
     <string name="action_settings">Settings</string>
+    <string name="delete_buddy_confirm">Delete this buddy?</string>
+    <string name="delete_title">Delete buddy?</string>
+    <string name="delete_confirmed">Deleted...</string>
 </resources>
